ecofy(auth): refatoração de codigo